In wrong directory on last commit. Here's the rest of it...
git-svn-id: https://oscars.es.net/repos/oscars/trunk@7676 c75a6b91-02ef-0310-b74a-e20389c9c41d